--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,78 @@
+html,
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background: linear-gradient(to bottom, #eee, #ccc);
 }
-
+html > body * {
+  box-sizing: border-box;
+  color: #55595f;
+}
+body {
+  padding: 140px 80px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+ul {
+  padding: 0;
+}
+li {
+  list-style: none;
+}
+.crud-container {
+  transition: all 350ms;
+  z-index: 9;
+  max-width: 800px;
+  margin: 0 auto;
+  background: linear-gradient(to bottom, #eee, #fff);
+  border-radius: 20px;
+  padding: 20px 40px;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+}
+.crud-container:hover {
+  -webkit-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+}
+#todoInput {
+  padding: 10px 20px;
+  width: 65%;
+  font-size: 36px;
+  border: 1px solid #ddd;
+  border-radius: 10px 0 0 10px;
+  outline: none;
+}
+#todoInput::placeholder {
+  color: #eee;
+  font-style: italic;
+}
+#todoInput:focus {
+  border: 1px solid #aaa;
+}
+#todoSubmit {
+  width: 35%;
+  padding: 10px 20px;
+  background: transparent;
+  color: #55595f;
+  cursor: pointer;
+  border: 1px solid #ddd;
+  transition: all 350ms;
+  font-weight: 700;
+  font-size: 36px;
+  border-radius: 0 10px 10px 0;
+  transition: all 350ms;
+  outline: none;
+}
+#todoSubmit:focus,
+#todoSubmit:hover {
+  background: #007aff;
+  color: #fff;
 }
