--- a/src/index.css
+++ b/src/index.css
@@ -178,7 +178,11 @@ li {
   margin: 20px 0;
   float: right;
 }
-
+.loading-gif {
+  display: block;
+  max-width: 64px;
+  margin: 10px auto 0;
+}
 @media only screen and (max-width: 767px) {
   body {
     padding: 70px 40px;
